добавляет модалку и визуальные переходы
модалка еще не анимированная, ховеры и фокусы готовы

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,67 +61,85 @@
             <div class="container">
                 <ul class="grid">
                     <li class="card-grid">
-                        <img src="./images/laptop.jpg" alt="ноутбук с карточками людей" width="370">
-                        <div class="card-container">
-                            <h2 class="card-header">Технокряк</h2>
-                            <p class="card-p">Веб-сайт</p>
-                        </div>
+                        <article>
+                            <img src="./images/laptop.jpg" alt="ноутбук с карточками людей" width="370">
+                            <div class="card-container">
+                                <h2 class="card-header">Технокряк</h2>
+                                <p class="card-p">Веб-сайт</p>
+                            </div>
+                        </article>
                     </li>
                     <li class="card-grid">
-                        <img src="./images/basketball-players.jpg" alt="баскетболист прыгает с мячом" width="370">
+                        <article>
+                            <img src="./images/basketball-players.jpg" alt="баскетболист прыгает с мячом" width="370">
                         <div class="card-container">
                             <h2 class="card-header">Постер New Orlean vs Golden Star</h2>
                             <p class="card-p">Дизайн</p>
                         </div>
+                        </article>
                     </li>
                     <li class="card-grid">
-                        <img src="./images/fish-and-logo.jpg" alt="логотип рыбного ресторана" width="370">
-                        <div class="card-container">
-                            <h2 class="card-header">Ресторан Seafood</h2>
-                            <p class="card-p">Приложение</p>
-                        </div>
+                        <article>
+                            <img src="./images/fish-and-logo.jpg" alt="логотип рыбного ресторана" width="370">
+                            <div class="card-container">
+                                <h2 class="card-header">Ресторан Seafood</h2>
+                                <p class="card-p">Приложение</p>
+                            </div>
+                        </article>
                     </li>
                     <li class="card-grid">
-                        <img src="./images/headset.jpg" alt="черные накладные наушники" width="370">
-                        <div class="card-container">
-                            <h2 class="card-header">Проект Prime</h2>
-                            <p class="card-p">Маркетинг</p>
-                        </div>
+                        <article>
+                            <img src="./images/headset.jpg" alt="черные накладные наушники" width="370">
+                            <div class="card-container">
+                                <h2 class="card-header">Проект Prime</h2>
+                                <p class="card-p">Маркетинг</p>
+                            </div>
+                        </article>
                     </li>
                     <li class="card-grid">
-                        <img src="./images/small-boxes.jpg" alt="декоративные коробки с надписями" width="370">
-                        <div class="card-container">
-                            <h2 class="card-header">Проект Boxes</h2>
-                            <p class="card-p">Приложение</p>
-                        </div>
+                        <article>
+                            <img src="./images/small-boxes.jpg" alt="декоративные коробки с надписями" width="370">
+                            <div class="card-container">
+                                <h2 class="card-header">Проект Boxes</h2>
+                                <p class="card-p">Приложение</p>
+                            </div>
+                        </article>
                     </li>
                     <li class="card-grid">
-                        <img src="./images/mac-screen.jpg" alt="экран макинтоша с информацией" width="370">
-                        <div class="card-container">
-                            <h2 class="card-header">Inspiration has no Borders</h2>
-                            <p class="card-p">Веб-сайт</p>
-                        </div>
+                        <article>
+                            <img src="./images/mac-screen.jpg" alt="экран макинтоша с информацией" width="370">
+                            <div class="card-container">
+                                <h2 class="card-header">Inspiration has no Borders</h2>
+                                <p class="card-p">Веб-сайт</p>
+                            </div>
+                        </article>
                     </li>
                     <li class="card-grid">
-                        <img src="./images/opened-book.jpg" alt="открытая книга" width="370">
-                        <div class="card-container">
-                            <h2 class="card-header">Издание Limited Edition</h2>
-                            <p class="card-p">Дизайн</p>
-                        </div>
+                        <article>
+                            <img src="./images/opened-book.jpg" alt="открытая книга" width="370">
+                            <div class="card-container">
+                                <h2 class="card-header">Издание Limited Edition</h2>
+                                <p class="card-p">Дизайн</p>
+                            </div>
+                        </article>
                     </li>
                     <li class="card-grid">
-                        <img src="./images/label.jpg" alt="ярлык бумажный" width="370">
-                        <div class="card-container">
-                            <h2 class="card-header">Проект LAB</h2>
-                            <p class="card-p">Маркетинг</p>
-                        </div>
+                        <article>
+                            <img src="./images/label.jpg" alt="ярлык бумажный" width="370">
+                            <div class="card-container">
+                                <h2 class="card-header">Проект LAB</h2>
+                                <p class="card-p">Маркетинг</p>
+                            </div>
+                        </article>
                     </li>
                     <li class="card-grid">
-                        <img src="./images/laptop-typing.jpg" alt="руки на клавиатуре ноутбука" width="370">
-                        <div class="card-container">
-                            <h2 class="card-header">Growing Business</h2>
-                            <p class="card-p">Приложение</p>
-                        </div>
+                        <article>
+                            <img src="./images/laptop-typing.jpg" alt="руки на клавиатуре ноутбука" width="370">
+                            <div class="card-container">
+                                <h2 class="card-header">Growing Business</h2>
+                                <p class="card-p">Приложение</p>
+                            </div>
+                        </article>
                     </li>
                 </ul>
             </div>
