--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
+        <header class="header">
             <div class="container flex">
                 <nav class="navigation">
                     <!-- Логотип -->
@@ -48,7 +48,19 @@
                     <h1 class="hero-header">
                         Эффективные решения<br> для вашего бизнеса
                     </h1>
-                    <a href="" class="button">Заказать услугу</a>
+                    <button class="button" data-modal-open>Заказать услугу</button>
+                    <div class="backdrop is-hidden"  data-modal>
+                        <div class="modal">
+                            <button class="close-button" data-modal-close>
+                                <svg width="11" height="11">
+                                    <use href="./images/icons.svg#close-button"></use>
+                                </svg>
+                            </button>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptatibus, molestias praesentium dolorem totam ipsa nisi culpa libero inventore tenetur aut obcaecati ullam rerum, beatae odio reiciendis veniam. Dolor, eveniet!*40
+
+                            </p> 
+                        </div>
+                    </div>
             </section>
         
         <!-- Преимущества и портфолио-->
@@ -100,9 +112,29 @@
             </h2>
             
                 <ul class="pictures">
-                    <li class="items"><a href=""><img src="./images/keyboard.jpg" alt="набор текста на клавиатуре" width="370"></a></li>
-                    <li class="items"><a href=""><img src="./images/mobile.jpg" alt="держит мобильник в руке" width="370"></a></li>
-                    <li class="items"><a href=""><img src="./images/tablet.jpg" alt="держит планшет" width="370"></a></li>
+                    <li class="items">
+                        <div class="pictures-thumb">
+                            <a href=""><img src="./images/keyboard.jpg" alt="набор текста на клавиатуре" width="370"></a>
+                            <div class="pictures-thumb-overlay">
+                                <p>Десктопные приложения</p>
+                            </div>
+                        </div></li>
+                    <li class="items">
+                        <div class="pictures-thumb">
+                            <a href=""><img src="./images/mobile.jpg" alt="держит мобильник в руке" width="370"></a>
+                            <div class="pictures-thumb-overlay">
+                                <p>Мобильные приложения</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="items">
+                        <div class="pictures-thumb">
+                            <a href=""><img src="./images/tablet.jpg" alt="держит планшет" width="370"></a>
+                            <div class="pictures-thumb-overlay">
+                                <p>Дизайнерские решения</p>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -214,6 +246,7 @@
                 </ul>
             </div>
         </section>
+        <!-- Партнеры -->
         <section class="partners">
             <h2>Постоянные клиенты</h2>
             <div class="container">
@@ -302,5 +335,6 @@
                 </div>
             </div>
         </footer>
+        <script src="./js/modal.js"></script>
     </body>
 </html>
