--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                                     <use href="./images/icons.svg#close-button"></use>
                                 </svg>
                             </button>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptatibus, molestias praesentium dolorem totam ipsa nisi culpa libero inventore tenetur aut obcaecati ullam rerum, beatae odio reiciendis veniam. Dolor, eveniet!*40
+                            <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptatibus, molestias praesentium dolorem totam ipsa nisi culpa libero inventore tenetur aut obcaecati ullam rerum, beatae odio reiciendis veniam. Dolor, eveniet!*40
 
-                            </p> 
+                            </p>  -->
                         </div>
                     </div>
             </section>
